feat(tmux): enable `renumber-windows`

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -20,6 +20,7 @@ set -sa terminal-overrides ",$TERM:RGB"
 set -g default-terminal tmux-256color
 set -g  base-index 1
 set -g  pane-base-index 1
+set -g renumber-windows on
 setw -g pane-border-status off
 set -g status-position bottom
 
