--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -54,6 +54,7 @@ bind-key 5 if-shell 'tmux select-window -t :5' '' 'new-window -t :5'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'git@github.com:mgalliou/themux'
 
 # settings
