feat(tmux): update themux configuration

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -57,6 +57,9 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'git@github.com:mgalliou/themux'
 
+set -g @themux_status_left "%session%%pane_current_path%"
+set -g @themux_parent_only_cwd "true"
+
 # settings
 set -g @yank_with_mouse off
 
