--- a/neovim/.config/nvim/utils/linter-config/.markdownlint.yaml
+++ b/neovim/.config/nvim/utils/linter-config/.markdownlint.yaml
@@ -2,6 +2,7 @@ default: true
 MD013:
   tables: false
   stern: true
+  block: false
 MD024:
   allow_different_nesting: true
   siblings_only: true
