--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -14,10 +14,12 @@ if-shell 'command -v fish' 'set -g default-shell $FISH'
 #}}},
 # UI {{{
 
-set -sa terminal-overrides ",$TERM:RGB"
-#set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
-#set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 set -g default-terminal tmux-256color
+set -sa terminal-overrides ",$TERM:RGB"
+# undercurl support
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm' 
+# undercurl colors support
+set -as terminal-overrides ',*:Setulc=\E[58::2::::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 set -g  base-index 1
 set -g  pane-base-index 1
 set -g renumber-windows on
