style(tmux): reformat config

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,5 +1,4 @@
-# Behavior {{{
-
+# behavior 
 set -g escape-time 10
 set -g focus-events on
 set -g status-keys vi
@@ -11,9 +10,7 @@ setw -g monitor-activity on
 run-shell 'tmux set-environment -gh FISH $(which fish)'
 if-shell 'command -v fish' 'set -g default-shell $FISH'
 
-#}}},
-# UI {{{
-
+# ui 
 set -g default-terminal tmux-256color
 set -sa terminal-overrides ",$TERM:RGB"
 # undercurl support
@@ -26,9 +23,7 @@ set -g renumber-windows on
 setw -g pane-border-status off
 set -g status-position bottom
 
-#}}},
-# Keybinds {{{
-
+# keybinds 
 # vim style pane selection
 #bind-key C-h select-pane -L
 #bind-key C-j select-pane -D
@@ -51,24 +46,19 @@ bind-key 3 if-shell 'tmux select-window -t :3' '' 'new-window -t :3'
 bind-key 4 if-shell 'tmux select-window -t :4' '' 'new-window -t :4' 
 bind-key 5 if-shell 'tmux select-window -t :5' '' 'new-window -t :5' 
 
-#}}},
-# Plugins {{{
-
+# Plugins 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'git@github.com:mgalliou/themux'
 
+set -g @yank_with_mouse off
+
 set -g @themux_status_left "%session%%pane_current_path%"
 set -g @themux_parent_only_cwd "true"
-
-# settings
-set -g @yank_with_mouse off
 
 # Auto install TMP and plugins
 if "test ! -d ~/.config/tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm && tmux source ~/.config/tmux/tmux.conf && ~/.config/tmux/plugins/tpm/bin/install_plugins'"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
-
-#}}},
