--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -48,21 +48,26 @@ bind-key 5 if-shell 'tmux select-window -t :5' '' 'new-window -t :5'
 
 # Plugins 
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'vaaleyard/tmux-dotbar'
-#set -g @plugin 'git@github.com:mgalliou/themux'
 
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @yank_with_mouse off
 
-set -g @themux_status_left "%session%%pane_current_path%"
-set -g @themux_parent_only_cwd "true"
+set -g @plugin 'tmux-plugins/tmux-copycat'
 
+#set -g @plugin 'git@github.com:mgalliou/themux'
+# set -g @themux_status_left "%session%%pane_current_path%"
+# set -g @themux_parent_only_cwd "true"
+
+set -g @plugin 'vaaleyard/tmux-dotbar'
 set -g @tmux-dotbar-bg "#282828"
 set -g @tmux-dotbar-fg "#665c54"
 set -g @tmux-dotbar-fg-current "#ebdbb2"
 set -g @tmux-dotbar-fg-session "#665c54"
 set -g @tmux-dotbar-fg-prefix "#83a598"
+set -g pane-border-style "fg=#665c54,bg=#282828"
+set -g pane-active-border-style "fg=#ebdbb2,bg=#282828"
+set -g pane-border-indicators arrows
+set -g pane-border-lines heavy
 
 # Auto install TMP and plugins
 if "test ! -d ~/.config/tmux/plugins/tpm" \
