feat(tmux): use named colors to follow terminal theme

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -59,13 +59,13 @@ set -g @plugin 'tmux-plugins/tmux-copycat'
 # set -g @themux_parent_only_cwd "true"
 
 set -g @plugin 'vaaleyard/tmux-dotbar'
-set -g @tmux-dotbar-bg "#282828"
-set -g @tmux-dotbar-fg "#665c54"
-set -g @tmux-dotbar-fg-current "#ebdbb2"
-set -g @tmux-dotbar-fg-session "#665c54"
-set -g @tmux-dotbar-fg-prefix "#83a598"
-set -g pane-border-style "fg=#665c54,bg=#282828"
-set -g pane-active-border-style "fg=#ebdbb2,bg=#282828"
+set -g @tmux-dotbar-bg "black"
+set -g @tmux-dotbar-fg "brightblack"
+set -g @tmux-dotbar-fg-current "white"
+set -g @tmux-dotbar-fg-session "brightblack"
+set -g @tmux-dotbar-fg-prefix "cyan"
+set -g pane-border-style "fg=brightblack,bg=black"
+set -g pane-active-border-style "fg=white,bg=black"
 set -g pane-border-indicators arrows
 set -g pane-border-lines heavy
 
