feat(tmux): update config

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -7,11 +7,11 @@ setw -g mouse on
 setw -g monitor-activity on
 
 # set fish from $PATH as default shell
-run-shell 'tmux set-environment -gh FISH $(which fish)'
-if-shell 'command -v fish' 'set -g default-shell $FISH'
+# run-shell 'tmux set-environment -gh FISH $(which fish)'
+# if-shell 'command -v fish' 'set -g default-shell $FISH'
 
 # ui 
-set -g default-terminal tmux-256color
+set -g default-terminal "$TERM"
 set -sa terminal-overrides ",$TERM:RGB"
 # undercurl support
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm' 
@@ -36,28 +36,33 @@ bind-key -r C-j resize-pane -D
 bind-key -r C-k resize-pane -U
 bind-key -r C-l resize-pane -R
 
-# split pane with current pane working directory
+# split pane and create new window with current pane working directory
 bind-key -r '"' split-window -c "#{pane_current_path}"
 bind-key -r '%' split-window -h -c "#{pane_current_path}"
+bind-key -r c new-window -c "#{pane_current_path}"
 
-bind-key 1 if-shell 'tmux select-window -t :1' '' 'new-window -t :1' 
-bind-key 2 if-shell 'tmux select-window -t :2' '' 'new-window -t :2' 
-bind-key 3 if-shell 'tmux select-window -t :3' '' 'new-window -t :3' 
-bind-key 4 if-shell 'tmux select-window -t :4' '' 'new-window -t :4' 
-bind-key 5 if-shell 'tmux select-window -t :5' '' 'new-window -t :5' 
-bind-key 6 if-shell 'tmux select-window -t :6' '' 'new-window -t :6' 
-bind-key 7 if-shell 'tmux select-window -t :7' '' 'new-window -t :7' 
-bind-key 8 if-shell 'tmux select-window -t :8' '' 'new-window -t :8' 
-bind-key 9 if-shell 'tmux select-window -t :9' '' 'new-window -t :9' 
-bind-key 0 if-shell 'tmux select-window -t :0' '' 'new-window -t :0' 
+bind-key 1 if-shell 'tmux select-window -t :1' '' 'new-window -t :1 -c "#{pane_current_path}"' 
+bind-key 2 if-shell 'tmux select-window -t :2' '' 'new-window -t :2 -c "#{pane_current_path}"' 
+bind-key 3 if-shell 'tmux select-window -t :3' '' 'new-window -t :3 -c "#{pane_current_path}"' 
+bind-key 4 if-shell 'tmux select-window -t :4' '' 'new-window -t :4 -c "#{pane_current_path}"' 
+bind-key 5 if-shell 'tmux select-window -t :5' '' 'new-window -t :5 -c "#{pane_current_path}"'
+bind-key 6 if-shell 'tmux select-window -t :6' '' 'new-window -t :6 -c "#{pane_current_path}"'
+bind-key 7 if-shell 'tmux select-window -t :7' '' 'new-window -t :7 -c "#{pane_current_path}"' 
+bind-key 8 if-shell 'tmux select-window -t :8' '' 'new-window -t :8 -c "#{pane_current_path}"' 
+bind-key 9 if-shell 'tmux select-window -t :9' '' 'new-window -t :9 -c "#{pane_current_path}"' 
+bind-key 0 if-shell 'tmux select-window -t :0' '' 'new-window -t :0 -c "#{pane_current_path}"' 
+
+unbind -T copy-mode-vi MouseDragEnd1Pane
+bind-key -T copy-mode-vi MouseDown1Pane select-pane\; send-keys -X clear-selection
+bind -n MouseDrag1Pane if -Ft= '#{mouse_any_flag}' 'if -Ft= \"#{pane_in_mode}\" \"copy-mode -eM\" \"send-keys -M\"' 'copy-mode -eM'
 
 # Plugins 
 set -g @plugin 'tmux-plugins/tpm'
 
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @yank_with_mouse off
+# set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @yank_with_mouse off
 
-set -g @plugin 'tmux-plugins/tmux-copycat'
+# set -g @plugin 'tmux-plugins/tmux-copycat'
 
 #set -g @plugin 'git@github.com:mgalliou/themux'
 # set -g @themux_status_left "%session%%pane_current_path%"
